--- a/UE4Assistant.Templates.csproj
+++ b/UE4Assistant.Templates.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Template.cs" />
     <Compile Include="Templates\Config\DefaultEditorSettings_ini.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -290,6 +291,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UE4Assistant\UE4Assistant.csproj">
+      <Project>{60f43fc3-ef8d-4334-92e9-b75dbbad3545}</Project>
+      <Name>UE4Assistant</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
