--- a/UE4Assistant.Templates.csproj
+++ b/UE4Assistant.Templates.csproj
@@ -5,6 +5,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <RootNamespace>UE4Assistant</RootNamespace>
+    <Version>4.25.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
