--- a/UE4Assistant.Templates.csproj
+++ b/UE4Assistant.Templates.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net472;net50;net60</TargetFrameworks>
+    <TargetFrameworks>net60;net70</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <RootNamespace>UE4Assistant</RootNamespace>
